Fix dropdowns on mobile

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -37,7 +37,7 @@
 
 @media screen and (max-width: 768px) {
     .clickable, .menu, .notificationsMenu {
-        max-width: 150px;
+        max-width: 100vw;
     }
 }
 
